--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,10 @@
 
     <TextView
         android:id="@+id/tvResult"
-        android:layout_width="wrap_content"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:text="Status: Menunggu Data..."
+        android:textAlignment="center"
         android:textSize="18sp"
         android:padding="16dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,22 +22,34 @@
 
     <Button
         android:id="@+id/btnRequestPermission"
-        android:layout_width="wrap_content"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:text="Minta Akses Penggunaan"
         app:layout_constraintTop_toBottomOf="@id/tvResult"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp" />
+        android:layout_marginBottom="8dp" />
 
     <Button
         android:id="@+id/btnUsage"
-        android:layout_width="wrap_content"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:text="Kirim Data Screen Time"
         app:layout_constraintTop_toBottomOf="@id/btnRequestPermission"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp" />
+        android:layout_marginBottom="8dp" />
+
+    <Button
+        android:id="@+id/btnChangeIp"
+        android:layout_width="270dp"
+        android:layout_height="wrap_content"
+        android:text="Ubah IP Server"
+        app:layout_constraintTop_toBottomOf="@id/btnUsage"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
